# duende

./: .clang-format  .gitignore  CMakeLists.txt  cmake_install.cmake  compile_commands.json  greeter_server.cpp  main  profile_client.cpp  profile_server.cpp
authservice/: CMakeLists.txt  README.md  data.cpp  jwt.cpp  main.cpp
authservice/include/: authservice.hpp  data.hpp  jwt.hpp
authservice/proto/: authservice.pb.cc  authservice.pb.h  authservice.proto
authservice/source/: authservice.cpp  client.cpp  client.hpp  client_main.cpp  server.cpp  server.hpp
client/: client.cpp  client.hpp  client_main.cpp  manager.hpp  profile_client.cpp
client/build-qt_project-Qt_6_6_1_for_macOS-Debug/: build.ninja  qtcsettings.cmake
client/build-qt_project-Qt_6_6_1_for_macOS-Debug/.cmake/api/v1/reply/: cache-v2-74982b2f488c665c4b04.json  cmakeFiles-v1-4f9f9a4de3a04ef6f6e0.json  codemodel-v2-4b44463003af445f9cc0.json  directory-.-Debug-8da16f1b5774aca57b35.json  index-2024-03-04T14-19-59-0541.json  target-qt_project-Debug-9451f0e1f908c0e54f62.json  target-qt_project_autogen-Debug-88fcc257953b7dc060ad.json  target-qt_project_autogen_timestamp_deps-Debug-51fb66ae5d94cb37adc0.json
client/build-qt_project-Qt_6_6_1_for_macOS-Debug/.qt/: QtDeploySupport.cmake
client/build-qt_project-Qt_6_6_1_for_macOS-Debug/.qt/info_plist/qt_project/: Info.plist
client/duende/: CMakeLists.txt  authwindow.cpp  authwindow.h  authwindow.ui  chats.cpp  chats.h  follows.cpp  follows.ui  main.cpp  mainwindow.cpp  mainwindow.ui  profile.cpp  profile.h  profile.ui  profile.ui.autosave  ptofile.cpp  ptofile.h  ptofile.ui  questionnaire.cpp  questionnaire.ui  recommendations.cpp  recommendations.ui  registrationpage.cpp  registrationpage.h  registrationpage.ui  sidebar.h
client/duende/img/: minimise.png:Zone.Identifier  minimizesign.png:Zone.Identifier  tarantino.jpg:Zone.Identifier
client/duende_qt/: CMakeLists.txt  duende  duende.cpp  duende.h  duende.ui  duendedesktop.cpp  duendedesktop.h  duendedesktop.ui  main.cpp~RF2ad35586.TMP
client/duende_qt/duende_autogen/: moc_predefs.h  mocs_compilation.cpp
client/duende_qt/duende_autogen/EWIEGA46WW/: moc_duende.cpp  moc_duendedesktop.cpp
client/duende_qt/duende_autogen/include/: ui_duende.h  ui_duendedesktop.h
client/qt_project/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
client/ui/: CMakeLists.txt  chats.ui  follows.h  main.cpp  mainwindow.h  profile.cpp  profile.h  profile.ui  questionnaire.cpp  questionnaire.h  questionnaire.ui  recommendations.h  registrationpage.cpp  registrationpage.h  registrationpage.ui  sidebar.cpp  sidebar.ui
client/ui/img/: closecross.png:Zone.Identifier
cmake/: README.md  grpc-generation.cmake
database_connector/: CMakeLists.txt  database_connector.cpp  database_connector.hpp  main.cpp
docker/: sql_queries.sql
include/: CMakeLists.txt  server.hpp
include/components/: CMakeLists.txt
include/components/database/: database-connector.cpp  database-connector.hpp  test.cpp
include/components/database/connection/: database-connector.hpp
include/components/database/docker/: deploy-db.sh  docker-compose.yml
include/components/database/extra/python-scripts/: db-clear.py  db-drop.py  db-init.py
include/components/database/extra/sql-queries/: sql_queries.sql
include/components/database/placeholders/: palceholders.hpp
include/components/database/services/authservice/: authservice.cpp  authservice.hpp
include/components/database/services/chat_service/: chat_service.cpp  chat_service.hpp
include/components/database/services/front_service/: front_service.cpp  front_service.hpp
include/components/database/services/profile_service/: profile_service.cpp  profile_service.hpp
include/components/jwt/: data.hpp  jwt.cpp  jwt.hpp  secret_key.hpp
include/services/: CMakeLists.txt
include/services/authservice/: data.hpp  errors.hpp  hash.cpp  hash.hpp  server.cpp  server.hpp  service.cpp  service.hpp  token.cpp  token.hpp  validity.cpp
include/services/chat_service/: chat_server.cpp  chat_server.hpp  chat_service.cpp  chat_service.hpp
include/services/front_service/: front_service.cpp  front_service.hpp
include/services/invitation_service/: invitation_server.cpp  invitation_server.hpp
include/services/profile_service/: profile_server.cpp  profile_server.hpp
proto/: authservice.grpc.pb.cc  authservice.pb.h  build_proto.sh  profile.grpc.pb.cc  profile.pb.cc  profile.proto
services/authservice/: authservice.grpc.pb.cc  authservice.grpc.pb.h  authservice.pb.cc  authservice.pb.h
services/profile_service/: profile.grpc.pb.cc  profile.grpc.pb.h  profile.pb.cc  profile.pb.h  profile_server.cpp  profile_server.hpp
source/: data.cpp  jwt.cpp
source/server/: server_main.cpp
src/: main.cpp  profile_server.cpp  server_main.cpp
src/proto/: authservice.grpc.pb.h  authservice.pb.cc  profile.grpc.pb.h  profile.pb.cc
src/proto/services/authservice/: authservice.proto  build_proto.sh
src/proto/services/chat_service/: chat.proto  chat_service.proto
src/proto/services/front_service/: front_service.proto
src/proto/services/invitation_service/: invitation.proto
src/proto/services/profile_service/: profile.proto
test/: CMakeLists.txt
test/database_tests/: test.cpp
test/function_tests/: test.cpp
